miscTests/export_tests/invalid/fn_missing_return_annotation.ml

let%export some (a:int) (b:int) = "hello"


